--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -212,6 +212,17 @@ e.g., the multiple processes based on struvite precipitation.
 
 Phosphorus recovery costs include operating and annualized capital costs. Capital costs are annualized through the application of an annual capital charge ratio $\left( ACCR\right)$ as defined by \citet{towler2013chemical}, assuming a typical interest rate of 5\% and a plant lifetime of 20 years. Dynamic phosphorus recovery costs in function of the processing capacity have been considered in order to capture the economies of scale for those technologies for which sufficient data are available.
 
+Phosphorus in manure represent an important flow within the agricultural sector.
+%Phosphorus can be recovered from different flows within the agricultural sector, including the production of manure. 
+The techniques used for phosphorus recovery from cattle and swine manure differ for the liquid and solid fractions. Struvite precipitation is he dominant technology for phosphorus recovery from liquid manure, existing different processes for struvite production based on the type of reactors used REF REF REF, although there exist modular processes based on physical separations priented to small-scale intensive livestock facilities REF. The recovery of phosphorus from the solid fraction of manure involves the incineration of the waste, and the further processing of the ashes, recovering phosphorus precipitates or phosphoric acid REF REF. Phosphorus recovery from poultry litter is based on acid extraction and further precipitation \citep{szogi2008phosphorus}.
+%Since this technology shows a lower development level, their use has been considered in Scenario 2, see Section ??.
+
+Slaughterhouse waste is flow from food industry which can be targeted for phosphorus recovery. It should be noted that slaughterhouse is comprised by a liquid (slaughterhouse wastewater) and a solid fraction (animal carcass waste) and, therefore, the phosphorus recovery systems for each flow will differ. Similarly to the case of phosphorus recovery from manure, phosphorus recovery from slaughterhouse wastewater is performed through through struvite precipitation \citep{Pearl2Kcost2}, while the animal animal carcass waste is incinerated and phosphorus is recovered from ashes in form of calcium carbonate or phosphoric acid \citep{jupp2021phosphorus}.
+%Phosphorus technologies suitable for phosphorus recovery from these sources are collected in Table \ref{table:TechParam}.
+
+Municipal wastewater contains significant amounts of phosphorus that can be recovered. It must be noted that phosphorus outflows from WWTPs are divided into phosphporus contained in the treated water and phosphorus contained in sludge. Phosphorus contained in water can be recovered through the formation of precipitates such as struvite, while phosphorus contained in sludge can be recovered either through the direct processing of sludge producing precipitates, of from sludge ashes after an incineraiton stage, obtaining different products such as phosphoric acid or calcium phosphare.
+%, as shown in Table \ref{table:TechParam}.
+
 
 \begin{table}[h]
 %\begin{sidewaystable}[ph!]
@@ -328,73 +339,74 @@ The production of animal food products exhibits a lower phosphorus use efficienc
 %
 %\subsubsection{Scenario 1: phosphorus recoverable with current technologies}
 
-\subsubsection{\textbf{Agricultural sector}}
-Phosphorus can be recovered from different flows within the agricultural sector, including the production of manure. Phosphorus recovery from cattle and swine manure is performed through struvite precipitation REF REF, existing different processes for struvite production at commercial stage, as described in Section ?REF?. Phosphorus recovery from poulty litter is based on acid extraction and further precipitation \citep{szogi2008phosphorus}. Since this technology shows a lower development level, their use has been considered in Scenario 2, see Section ??.  \citet{martin2021geospatial} determined that the implementation of struvite production processes at livestock facilities is mainly driven by the scale of the CAFO, and thus they can be divided by into three clusters regarding the type of phosphorus recovery processes implemented, i.e., facilities with capacity for between 300 and 2,000 animal units, for between 2,000 and 5,000 animals units, and facilities large than 5,000 animal units. An animal unit (AU) is defined as an animal equivalent of 1,000 pounds (453.6 kg) live weight \citep{animal_unit_definition}. The most suitable phosphorus recovery for process for the facilities of each one of these clusters was determined by \citet{martin2021geospatial}, resulting in that  Multiform-type processes are the most suitable struvite produciton system for the cluster including the small-size CAFOs cluster (300-2,000 AUs), NuReSys-type systems are suitable for medium-size CAFOs (2,00-5,000 AUs), while that the suitable struvite system for large-scale CAFOs is Crystalactor-type processes. The investment and operating cost of these systems is collected in Table ?REF?.
+\subsubsection{Agricultural sector}
+Manure is an agricultural flow from which effective phosphorus recovery might be achieved
+%\citet{martin2021geospatial} determined that the implementation of struvite production processes at livestock facilities is mainly driven by the scale of the CAFO, and thus they can be divided by into three clusters regarding the type of phosphorus recovery processes implemented, i.e., facilities with capacity for between 300 and 2,000 animal units, for between 2,000 and 5,000 animals units, and facilities large than 5,000 animal units. An animal unit (AU) is defined as an animal equivalent of 1,000 pounds (453.6 kg) live weight \citep{animal_unit_definition}. The most suitable phosphorus recovery for process for the facilities of each one of these clusters was determined by \citet{martin2021geospatial}, resulting in that  Multiform-type processes are the most suitable struvite produciton system for the cluster including the small-size CAFOs cluster (300-2,000 AUs), NuReSys-type systems are suitable for medium-size CAFOs (2,00-5,000 AUs), while that the suitable struvite system for large-scale CAFOs is Crystalactor-type processes. The investment and operating cost of these systems is collected in Table ?REF?.
+%
+%The number of cattle animals is reported by the Census of Agriculture at Census Division level REF, but no available data on CAFOs size is available for the province of Ontario. Since this information is essential to determine the suitable phopshorus recovery process to be considered, and in turn the phosphorus recovery cost, the distribution of CAFOs sizes has been approximated to the cattle and swine CAFOs size distribution of other regions in the vicinity of the Great Lakes area, namely Ohio, Pennsylvania, Indiana, Michigan, and Wisconsin. The distribution of CAFOs size in each one of these regions has been approximated through a truncated normal distribution, since the possible size of livestock facilities is bounded between 300 animal units for being considered as an intensive livestock production facility REF, and 10,000 animal units in order to remove extra-large CAFOs that are outliers in the size distribution, avoiding excessive long tails distorting the distributions.
+%For cattle CAFOs, it has been found that two scenarios can be identified, a first scenario (Scenario 1) where the average size of CAFOs is larger, around 2,400 animal units based on the parameters of the states of Ohio, Wisconsin, and Michigan, and a second scenario (Scenario 2) based on the states of Pennsylvania and Indiana where the average size of CAFOs is smaller, lower than 1,500 animal units. Two CAFOs size distributions are proposed for Ontario based on each one of these scenarios, estimating the parameters of Eq. REF as the average parameters of the distributions in each scenario, as shown in \ref{fig:CAFOsSize_Scenarios}. 
+%For swine CAFOs, the size distribution patterns are similar for all the states studied, with the exception of the Wisconsin, which has been discarded due to the little number of swine facilities installed in this state. A truncated normal distribution with mean equal to 741 AUs and standard deviation equal to 456 AUs is assumed to stimate the distribution of swine CAFOs in Ontario, as shown in \ref{fig:CAFOsSize_Scenarios}.
+%The distribution parameters for both cattle and swine CAFOs size are shown in Table \ref{table:CAFOsSizeScenarios}.
+%The number of CAFOs in each cluster is determined through the Monte Carlo method, with the constrain that the sum of animal units of all CAFOs must not exceed the total number of animal units of Ontario, which for cattle is equal to 1,376,984 animal units for year 2019, which result in the release of 15,923 kt of manure per year and 13.27 kt of phosphorus per year, and for swine represent 506,768 animal units, 5,779 kt of manure per year, and 8.57 kt of phosphorus per year REF. The number of CAFOs belonging to each cluster are shown in Table \ref{table:CAFOsSizeScenarios}. Further details on the estimation of CAFOs size distribution can be found in the Supplementary Information, Section ??.
+%
+%\begin{figure}[H]
+%	\centering
+%	\begin{subfigure}[t]{0.49\textwidth}
+%		\centering
+%		\includegraphics[width=\linewidth, trim={0.2cm 0.2cm 0.7cm 0.7cm},clip]{Figures/Scenario1_CAFOs_Size_Distribution.pdf} 
+%		\caption{Cattle (scenario 1)}
+%		\label{fig:CAFOsSize_Scenario1}
+%	\end{subfigure}
+%	\begin{subfigure}[t]{0.49\textwidth}
+%		\centering
+%		\includegraphics[width=\linewidth, trim={0.2cm 0.2cm 0.7cm 0.7cm},clip]{Figures/Scenario2_CAFOs_Size_Distribution.pdf}
+%		\caption{Cattle (scenario 2)}
+%		\label{fig:CAFOsSize_Scenario2}
+%	\end{subfigure}
+%
+%\vspace{0.5cm}
+%
+%	\begin{subfigure}[t]{0.49\textwidth}
+%		\centering
+%		\includegraphics[width=\linewidth, trim={0.2cm 0.2cm 0.7cm 0.7cm},clip]{Figures/Scenario1_SwineCAFOs_Size_Distribution.pdf}
+%		\caption{Swine}
+%		\label{fig:CAFOsSize_Scenario2}
+%	\end{subfigure}
+%	
+%	\caption{Proposed distribution of CAFOs size in the province of Ontario based on the size distribution of cattle and swine facilities in other regions in the vicinity of the Great Lakes area. Cattle scenario 1 is based on the pattern shown by the US states of Ohio, Wisconsin, and Michigan, which shows an average CAFO size around 2,4000 animal units, while cattle scenario 2 is based on the pattern shown by the US states of Pennsylvania and Indiana, with an average CAFO size around 1,3000 animal units.}
+%	\label{fig:CAFOsSize_Scenarios}
+%\end{figure}
+%
+%\begin{table}[h]
+%	\centering
+%	\caption{Truncated normal distribution parameters and number of CAFOs in each cluster for the scenarios studied regarding cattle and swine CAFOs size distribution.} \label{table:CAFOsSizeScenarios}
+%	\resizebox{0.6\columnwidth}{!}{
+%		%		\begin{threeparttable}
+%		\begin{tabular}{@{}cccc@{}}
+%			\toprule
+%			Parameter & Cattle (scenario 1) & Cattle (scenario 2) & Swine \\ \midrule
+%			mean                                                                              & 2,423.40   & 1,463.94 & 741.42    \\
+%			std                                                                               & 1,459.70   & 1,308.91 & 455.71   \\
+%			a                                                                                 & 300        & 300  & 300    \\
+%			b                                                                                 & 10,000        & 10,000 & 10,000     \\
+%			\begin{tabular}[c]{@{}c@{}}Number of CAFOs\\ (300-2,000 AU)\end{tabular}           & 177        & 386 & 575        \\
+%			\begin{tabular}[c]{@{}c@{}}Number of CAFOs\\ (2,000-5,000 AU)\end{tabular}          & 324        & 319   & 2     \\
+%			\begin{tabular}[c]{@{}c@{}}Number of CAFOs\\ (\textgreater{}5,000 AU)\end{tabular} & 22         & 3    & 0      \\
+%			Total AUs & 13,76,984 & 13,76,984 & 506,768 \\ \bottomrule
+%		\end{tabular}
+%		%			\begin{tablenotes}
+%		%				\footnotesize
+%		%				\item 1: \citet{MilkOntario}
+%		%			\end{tablenotes}
+%		%	\end{threeparttable}
+%	}
+%\end{table}
 
-The number of cattle animals is reported by the Census of Agriculture at Census Division level REF, but no available data on CAFOs size is available for the province of Ontario. Since this information is essential to determine the suitable phopshorus recovery process to be considered, and in turn the phosphorus recovery cost, the distribution of CAFOs sizes has been approximated to the cattle and swine CAFOs size distribution of other regions in the vicinity of the Great Lakes area, namely Ohio, Pennsylvania, Indiana, Michigan, and Wisconsin. The distribution of CAFOs size in each one of these regions has been approximated through a truncated normal distribution, since the possible size of livestock facilities is bounded between 300 animal units for being considered as an intensive livestock production facility REF, and 10,000 animal units in order to remove extra-large CAFOs that are outliers in the size distribution, avoiding excessive long tails distorting the distributions.
-For cattle CAFOs, it has been found that two scenarios can be identified, a first scenario (Scenario 1) where the average size of CAFOs is larger, around 2,400 animal units based on the parameters of the states of Ohio, Wisconsin, and Michigan, and a second scenario (Scenario 2) based on the states of Pennsylvania and Indiana where the average size of CAFOs is smaller, lower than 1,500 animal units. Two CAFOs size distributions are proposed for Ontario based on each one of these scenarios, estimating the parameters of Eq. REF as the average parameters of the distributions in each scenario, as shown in \ref{fig:CAFOsSize_Scenarios}. 
-For swine CAFOs, the size distribution patterns are similar for all the states studied, with the exception of the Wisconsin, which has been discarded due to the little number of swine facilities installed in this state. A truncated normal distribution with mean equal to 741 AUs and standard deviation equal to 456 AUs is assumed to stimate the distribution of swine CAFOs in Ontario, as shown in \ref{fig:CAFOsSize_Scenarios}.
-The distribution parameters for both cattle and swine CAFOs size are shown in Table \ref{table:CAFOsSizeScenarios}.
-The number of CAFOs in each cluster is determined through the Monte Carlo method, with the constrain that the sum of animal units of all CAFOs must not exceed the total number of animal units of Ontario, which for cattle is equal to 1,376,984 animal units for year 2019, which result in the release of 15,923 kt of manure per year and 13.27 kt of phosphorus per year, and for swine represent 506,768 animal units, 5,779 kt of manure per year, and 8.57 kt of phosphorus per year REF. The number of CAFOs belonging to each cluster are shown in Table \ref{table:CAFOsSizeScenarios}. Further details on the estimation of CAFOs size distribution can be found in the Supplementary Information, Section ??.
+\subsubsection{Industrial sector}
+Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale, and therefore average slaughterhouse capacities of 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered per year respectively are assumed \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}, resulting in 7, 6, and 17 catlle, hog, and poultry slaughtering facilities with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible. The number of slaughtered animals can be found in Table ?? of Supplementary Material.
 
-\begin{figure}[H]
-	\centering
-	\begin{subfigure}[t]{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth, trim={0.2cm 0.2cm 0.7cm 0.7cm},clip]{Figures/Scenario1_CAFOs_Size_Distribution.pdf} 
-		\caption{Cattle (scenario 1)}
-		\label{fig:CAFOsSize_Scenario1}
-	\end{subfigure}
-	\begin{subfigure}[t]{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth, trim={0.2cm 0.2cm 0.7cm 0.7cm},clip]{Figures/Scenario2_CAFOs_Size_Distribution.pdf}
-		\caption{Cattle (scenario 2)}
-		\label{fig:CAFOsSize_Scenario2}
-	\end{subfigure}
-
-\vspace{0.5cm}
-
-	\begin{subfigure}[t]{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth, trim={0.2cm 0.2cm 0.7cm 0.7cm},clip]{Figures/Scenario1_SwineCAFOs_Size_Distribution.pdf}
-		\caption{Swine}
-		\label{fig:CAFOsSize_Scenario2}
-	\end{subfigure}
-	
-	\caption{Proposed distribution of CAFOs size in the province of Ontario based on the size distribution of cattle and swine facilities in other regions in the vicinity of the Great Lakes area. Cattle scenario 1 is based on the pattern shown by the US states of Ohio, Wisconsin, and Michigan, which shows an average CAFO size around 2,4000 animal units, while cattle scenario 2 is based on the pattern shown by the US states of Pennsylvania and Indiana, with an average CAFO size around 1,3000 animal units.}
-	\label{fig:CAFOsSize_Scenarios}
-\end{figure}
-
-\begin{table}[h]
-	\centering
-	\caption{Truncated normal distribution parameters and number of CAFOs in each cluster for the scenarios studied regarding cattle and swine CAFOs size distribution.} \label{table:CAFOsSizeScenarios}
-	\resizebox{0.6\columnwidth}{!}{
-		%		\begin{threeparttable}
-		\begin{tabular}{@{}cccc@{}}
-			\toprule
-			Parameter & Cattle (scenario 1) & Cattle (scenario 2) & Swine \\ \midrule
-			mean                                                                              & 2,423.40   & 1,463.94 & 741.42    \\
-			std                                                                               & 1,459.70   & 1,308.91 & 455.71   \\
-			a                                                                                 & 300        & 300  & 300    \\
-			b                                                                                 & 10,000        & 10,000 & 10,000     \\
-			\begin{tabular}[c]{@{}c@{}}Number of CAFOs\\ (300-2,000 AU)\end{tabular}           & 177        & 386 & 575        \\
-			\begin{tabular}[c]{@{}c@{}}Number of CAFOs\\ (2,000-5,000 AU)\end{tabular}          & 324        & 319   & 2     \\
-			\begin{tabular}[c]{@{}c@{}}Number of CAFOs\\ (\textgreater{}5,000 AU)\end{tabular} & 22         & 3    & 0      \\
-			Total AUs & 13,76,984 & 13,76,984 & 506,768 \\ \bottomrule
-		\end{tabular}
-		%			\begin{tablenotes}
-		%				\footnotesize
-		%				\item 1: \citet{MilkOntario}
-		%			\end{tablenotes}
-		%	\end{threeparttable}
-	}
-\end{table}
-
-\subsubsection{\textbf{Industrial sector}}
-Slaughterhouse waste is a waste flow from food industry which can be targeted for phosphorus recovery. Phosphorus can be recovered from the wastewater produced in slaughterhouses through struvite precipitation \citep{Pearl2Kcost2}, and from the solid residues from animal carcasses \citep{jupp2021phosphorus}. Phosphorus technologies suitable for phosphorus recovery from these sources are collected in Table \ref{table:TechParam}. Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale, and therefore average slaughterhouse capacities of 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered per year respectively are assumed \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}, resulting in 7, 6, and 17 catlle, hog, and poultry slaughtering facilities with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible. The number of slaughtered animals can be found in Table ?? of Supplementary Material.
-
-\subsubsection{\textbf{Urban sector}}
-Municipal wastewater contains significant amounts of phosphorus that can be recovered. It must be noted that phosphorus outflows from WWTPs are divided into phosphporus contained in the treated water and phosphorus contained in sludge. Phosphorus contained in water can be recovered through the formation of precipitates such as struvite, while phosphorus contained in sludge can be recovered either through the direct processing of sludge producing precipitates, of from sludge ashes after an incineraiton stage, obtaining different products such as phosphoric acid or calcium phosphare, as shown in Table \ref{table:TechParam}. The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which in alignment with the distribution values reported by \citep{egle_phosphorus_2016}.
+\subsubsection{Urban sector}
+The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which in alignment with the distribution values reported by \citep{egle_phosphorus_2016}.
 
 \subsection{Economic implications of phosphorus recovery in Ontario}
 Economic costs or saving derived from the recovery of P in the province and all implications related with economy
