--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -1249,7 +1249,7 @@ chapter = {6},
   title={Phosphorus recovery from animal manure: Technical opportunities and agro-economical perspectives},
   author={Schoumans, OF and Rulkens, WH and Oenema, O and Ehlert, PAI},
   year={2010},
-  institution={Alterra}
+  institution={{Alterra, Wageningen UR}}
 }
 
 @article{zagklis2020assessing,
@@ -1322,5 +1322,24 @@ chapter = {6},
     institution  = {{National Aeronautics and Space Administration}},
     year = {2022},
     howpublished = "\url{https://www.nasa.gov/pdf/458490main_TRL_Definitions.pdf}",
+    note = "[Online; accessed 15-August-2022]"
+    }
+
+@article{martin2022analysis,
+  title={Analysis of incentive policies for phosphorus recovery at livestock facilities in the Great Lakes area},
+  author={Mart{\'\i}n-Hern{\'a}ndez, Edgar and Hu, Yicheng and Zavala, Victor M and Mart{\'\i}n, Mariano and Ruiz-Mercado, Gerardo J},
+  journal={Resources, Conservation and Recycling},
+  volume={177},
+  pages={105973},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@misc{CAFOSAvgSize,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Livestock estimates}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2022},
+    howpublished = "\url{https://www150.statcan.gc.ca/n1/daily-quotidien/220228/dq220228d-cansim-eng.htm}",
     note = "[Online; accessed 15-August-2022]"
     }
